; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_main.c_i40iw_ceq_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_main.c_i40iw_ceq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40iw_ceq = type { i32, i32 }

@.str = private unnamed_addr constant [37 x i8] c"expected irq = %d received irq = %d\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @i40iw_ceq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i40iw_ceq_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.i40iw_ceq*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.i40iw_ceq*
  store %struct.i40iw_ceq* %7, %struct.i40iw_ceq** %5, align 8
  %8 = load %struct.i40iw_ceq*, %struct.i40iw_ceq** %5, align 8
  %9 = getelementptr inbounds %struct.i40iw_ceq, %struct.i40iw_ceq* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.i40iw_ceq*, %struct.i40iw_ceq** %5, align 8
  %15 = getelementptr inbounds %struct.i40iw_ceq, %struct.i40iw_ceq* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @i40iw_pr_err(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %13, %2
  %20 = load %struct.i40iw_ceq*, %struct.i40iw_ceq** %5, align 8
  %21 = getelementptr inbounds %struct.i40iw_ceq, %struct.i40iw_ceq* %20, i32 0, i32 1
  %22 = call i32 @tasklet_schedule(i32* %21)
  %23 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %23
}

declare dso_local i32 @i40iw_pr_err(i8*, i32, i32) #1

declare dso_local i32 @tasklet_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
